Refactoring dirs and files, bug fixing because of it

--- a/frontend/pages/loggedin.html
+++ b/frontend/pages/loggedin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome - Done Deal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/frontend/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -43,6 +43,6 @@
         </div>
     </div>
 
-    <script src="loggedin.js"></script>
+    <script src="/frontend/scripts/loggedin.js"></script>
 </body>
 </html>
