--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Done Deal - Login/Register</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/frontend/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -33,6 +33,6 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="/frontend/scripts/app.js"></script>
 </body>
 </html>
